--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^3.4.7
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +52,8 @@ dev_dependencies:
   table_calendar: ^3.0.7
   flutter_bloc: ^8.1.0
   flutter_svg: ^1.1.4
-
+  firebase_core: ^1.22.0
+  firebase_auth: 3.8.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
