--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   flutter_svg: ^1.1.4
   firebase_core: ^1.22.0
   firebase_auth: 3.8.0
+  alex_core: ^0.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
