--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
   firebase_auth: 3.8.0
   alex_core: ^0.0.1
   shared_preferences: ^2.0.15
+  flutter_windowmanager: ^0.2.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
